--- a/publication.html
+++ b/publication.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="ASU">
-    <meta name="author" content="Chaowei Xiao">
+    <meta name="author" content="Hongyu Guo">
 
-    <title>Chaowei Xiao, UW Madison</title>
+    <title>Hongyu Guo, National Research Council Canada, University of Ottawa</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
