--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <!-- /.col-lg-8 -->
         <div class="col-lg-8">
-          <h3>Chaowei Xiao </h3>
+          <h3>Hongyu (Harry) Guo </h3>
           <!-- <p>PhD Candidate</p>
           <p>Room 3944, Beyster Building</p>
           <p>2260 Hayward Street, Ann Arbor, Mi 48109</p>
