--- a/index.html
+++ b/index.html
@@ -63,12 +63,8 @@
         <!-- /.col-lg-8 -->
         <div class="col-lg-8">
           <h3>Hongyu (Harry) Guo </h3>
-          <!-- <p>PhD Candidate</p>
-          <p>Room 3944, Beyster Building</p>
-          <p>2260 Hayward Street, Ann Arbor, Mi 48109</p>
-           -->
           <p>Email: cxiao34@wisc.edu</p>
-          <p class=" m-0">I am Chaowei Xiao, an assistant professor at the University of Wisconsin, Madison and  a <a href="https://research.nvidia.com/labs/avg/"> research scientist at NVIDIA </a>.
+          <p class=" m-0">I am Hongyu Guo, an assistant professor at the University of Wisconsin, Madison and  a <a href="https://research.nvidia.com/labs/avg/"> research scientist at NVIDIA </a>.
             
             <!-- I obtained my PhD degree from  University of Michigan, Ann Arbor under supervision of Professor <a href="http://web.eecs.umich.edu/~mingyan/">Mingyan Liu</a> . I obtained my bachelor's degree in School of Software from Tsinghua University in 2015.  -->
             <!-- advised by Professor <a href="http://www.cse.msu.edu/~liuyunha/">Yunhao Liu</a>, Professor <a href="http://www.thss.tsinghua.edu.cn/publish/soft/3641/2013/20130711150050931989171/20130711150050931989171_.html">Zheng Yang</a> and Dr. <a href="http://www4.comp.polyu.edu.hk/~csyanglei/#/pages/profile/about">Lei Yang</a>.  -->
@@ -84,11 +80,6 @@
              <!-- Professor <a href="http://www.thss.tsinghua.edu.cn/publish/soft/3641/2013/20130711150050931989171/20130711150050931989171_.html">Zheng Yang</a> and Dr. <a href="http://www4.comp.polyu.edu.hk/~csyanglei/#/pages/profile/about">Lei Yang</a>.  -->
           </p>
           <p class="m-0"><a href="https://scholar.google.com/citations?user=Juoqtj8AAAAJ&hl=en">[Google Scholar] </a> <a href="https://safolab-wisc.github.io/"> [Group Website]</a></p>
-          <p> <font color='blue' >
-            
-            I’m looking for self-motivated students (B.S., Master, and Ph.D.) who are interested in my research. If you are interested in working with me, drop me an email with your CV. Check out our PhD programs at <a href="https://guide.wisc.edu/graduate/computer-sciences/computer-sciences-phd/"> Computer Science </a>  or  <a href="https://ischool.wisc.edu/programs/phd/"> Information School </a> @ University of Wisconsin Madison and mention my name in your application and research statement.  
-  
-          </font></p> 
            <p> <font color='blue' >
           UW-Madison is an excellent place for research, and Madison is a wonderful city to live in. Please check out these videos (Why <a href="https://www.youtube.com/watch?v=8cRE4F8GOBE">UW-Madison</a>,<a href="https://www.youtube.com/watch?v=XTJA5alrisQ?"> Madison</a>).
    </font></p> 
