--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
         <!-- /.col-lg-8 -->
         <div class="col-lg-8">
           <h3>Hongyu (Harry) Guo </h3>
-          <p>Email: cxiao34@wisc.edu</p>
-          <p class=" m-0">I am Hongyu Guo, an assistant professor at the University of Wisconsin, Madison and  a <a href="https://research.nvidia.com/labs/avg/"> research scientist at NVIDIA </a>.
+          <p>Email: hongyu.guo@uottawa.ca</p>
+          <p class=" m-0"> I am a Senior Researcher Officer at the <a href="https://nrc.canada.ca/en"> Digital Technologies Research Center of the National Research Council Canada (NRC) </a>. He is also an Adjunct Professor in the School of Electrical Engineering and Computer Science at the University of Ottawa. Hongyu received the BEng and PhD degrees from the Shanghai Jiao Tong University and University of Ottawa, respectively, both in computer science. 
+Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
+          
             
             <!-- I obtained my PhD degree from  University of Michigan, Ann Arbor under supervision of Professor <a href="http://web.eecs.umich.edu/~mingyan/">Mingyan Liu</a> . I obtained my bachelor's degree in School of Software from Tsinghua University in 2015.  -->
             <!-- advised by Professor <a href="http://www.cse.msu.edu/~liuyunha/">Yunhao Liu</a>, Professor <a href="http://www.thss.tsinghua.edu.cn/publish/soft/3641/2013/20130711150050931989171/20130711150050931989171_.html">Zheng Yang</a> and Dr. <a href="http://www4.comp.polyu.edu.hk/~csyanglei/#/pages/profile/about">Lei Yang</a>.  -->
