--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
           
              <!-- Professor <a href="http://www.thss.tsinghua.edu.cn/publish/soft/3641/2013/20130711150050931989171/20130711150050931989171_.html">Zheng Yang</a> and Dr. <a href="http://www4.comp.polyu.edu.hk/~csyanglei/#/pages/profile/about">Lei Yang</a>.  -->
           </p>
-          <p class="m-0"><a href="https://scholar.google.com/citations?user=Juoqtj8AAAAJ&hl=en">[Google Scholar] </a> <a href="https://safolab-wisc.github.io/"> [Group Website]</a></p>
-           <p> <font color='blue' >
-          UW-Madison is an excellent place for research, and Madison is a wonderful city to live in. Please check out these videos (Why <a href="https://www.youtube.com/watch?v=8cRE4F8GOBE">UW-Madison</a>,<a href="https://www.youtube.com/watch?v=XTJA5alrisQ?"> Madison</a>).
-   </font></p> 
+          <p class="m-0"> <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
           </font></p> 
 
           <br>
