--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
       <!-- <h5> 2023</h5> -->
          <ul>
 
-                <li><b>[New][LLM Security] Mitigating Fine-tuning Jailbreak Attack with Backdoor Enhanced Alignment.  </b> <p class='content'> Jiongxiao Wang, Jiazhao Li, Yiquan Li, Xiangyu Qi, Muhao Chen, Junjie Hu, Yixuan Li, Bo Li, Chaowei Xiao
-</p> <a href="https://arxiv.org/abs/2402.14968">NeurIPS 2024</a> </li>
+                <li><b>[New][LLM Security] Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
+</p> <a href="https://arxiv.org/pdf/2305.18090.pdf">ICLR 2024</a> </li>
          <li><b>[LLM For Driving] Dolphins: Multimodal Language Model for Driving.  </b> <p class='content'>  Yingzi Ma, Yulong Cao, Jiachen Sun, Marco Pavone, Chaowei Xiao</p> <a href="https://arxiv.org/abs/2312.00438"> ECCV 2024</a> </li>     
 
        <li><b> [ Embodied Agent] Voyager: An Open-Ended Embodied Agent with Large Language Models.  </b> <p class='content'>  Guanzhi Wang, Yuqi Xie, Yunfan Jiang, Ajay Mandlekar, Chaowei Xiao, Yuke Zhu, Linxi Fan, Anima Anandkumar
