--- a/index.html
+++ b/index.html
@@ -140,13 +140,15 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
       <!-- <h5> 2023</h5> -->
          <ul>
 
-                <li><b>[New][LLM Security] Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
+                <li><b>[LLM for Drug] Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
 </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">ICLR 2024</a> </li>
-         <li><b>[LLM For Driving] Dolphins: Multimodal Language Model for Driving.  </b> <p class='content'>  Yingzi Ma, Yulong Cao, Jiachen Sun, Marco Pavone, Chaowei Xiao</p> <a href="https://arxiv.org/abs/2312.00438"> ECCV 2024</a> </li>     
+         <li><b>[Geometric Modeling] Symmetry-Informed Geometric Representation for Molecules, Proteins, and Crystalline Materials.  </b> <p class='content'>  Liu, S., Du, W., Li, Y., Li, Z., Zheng, Z., Duan, C., Ma, Z., Yaghi, O., Anandkumar, A., Borgs, C., Chayes, J., Guo, H., & Tang, J.</p> <a href="https://arxiv.org/pdf/2306.09375.pdf"> NeurIPS 2023</a> </li>     
 
-       <li><b> [ Embodied Agent] Voyager: An Open-Ended Embodied Agent with Large Language Models.  </b> <p class='content'>  Guanzhi Wang, Yuqi Xie, Yunfan Jiang, Ajay Mandlekar, Chaowei Xiao, Yuke Zhu, Linxi Fan, Anima Anandkumar
-</p> <a> TMLR 2024</a> </li>     
-
+       <li><b> [Protein Editing] Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering.  </b> <p class='content'>  Li, T., Guo, H., Grazioli, F., Gerstein, M., & Min, M. 
+</p> <a href="https://arxiv.org/pdf/2210.08171.pdf"> NeurIPS 2023</a> </li>     
+       <li><b> [Multi-modal Pretraining] A Group Symmetric Stochastic Differential Equation Model for Molecule Multi-modal Pretraining.  </b> <p class='content'>  Liu, S., Du, W., Ma, Z., Guo, H., & Tang J. 
+</p> <a href="https://arxiv.org/pdf/2305.18407.pdf"> ICML 2023</a> </li>    
+           
 </ul>
 
 
