--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
           <h4 id="pub"> Preprints </h4>
        <ul>
 
-                       <li><b> [New][LLM System Security] A New Era in LLM Security: Exploring Security Concerns in Real-World LLM-based Systems. </b><p class='content'> Fangzhou Wu, Ning Zhang, Somesh Jha, Patrick McDaniel, Chaowei Xiao. </p><a href="https://arxiv.org/abs/2402.18649">https://arxiv.org/abs/2402.18649</a></li>
+                       <li><b> [New][Text Guided Protein Design] A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
+Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2302.04611">arXiv</a></li>
  
 
        </ul>
