--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
       <ul>
         <li style="display:none "> <a href="cv_chaoweixiao_Feb.pdf">package</a> </li>
         <li style="display:none "> <a href="package_ChaoweiXiao.pdf">package</a> </li>
-             <li> [08/2024] We got USENIX Security Distinguished Paper Award. </li>
-                    <li> [10/2024] I will be at Alignment workshop at Bay Area  </li>
+             <li> [08/2024] We got .... </li>
+                    <li> [10/2024] I will ... </li>
 
       </div>
 
