--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="University of Wisconsin, Madison">
+    <meta name="description" content="National Research Council Canada">
     <meta name="author" content="Hongyu Guo">
 
     <title>Hongyu Guo, National Research Council Canada, University of Ottawa, Canada</title>
@@ -26,7 +26,7 @@
 
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<!--     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
         </div>
       </div>
     </nav>
-
+-->
     <!-- Page Content -->
     <div class="container">
 
