--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-8">
           <h3>Hongyu (Harry) Guo </h3>
           <p>Email: hongyu.guo@uottawa.ca</p>
-          <p class=" m-0"> I am a Senior Researcher Officer at the <a href="https://nrc.canada.ca/en"> Digital Technologies Research Center of the National Research Council Canada (NRC) </a>. He is also an Adjunct Professor in the School of Electrical Engineering and Computer Science at the University of Ottawa. Hongyu received the BEng and PhD degrees from the Shanghai Jiao Tong University and University of Ottawa, respectively, both in computer science. 
+          <p class=" m-0"> I am a Senior Researcher Officer at the <a href="https://nrc.canada.ca/en"> Digital Technologies Research Center of the National Research Council Canada (NRC) </a>. I am also an Adjunct Professor in the School of Electrical Engineering and Computer Science at the University of Ottawa. I received the BEng and PhD degrees from the Shanghai Jiao Tong University and University of Ottawa, respectively, both in computer science. 
 Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
           
             
