--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Heading Row -->
       <div class="row my-4">
         <div class="col-lg-4">
-          <img class="img-fluid rounded img-responsive" style="width:80%" src="img/avatar_new.jpg" alt="">
+          <img class="img-fluid rounded img-responsive" style="width:80%" src="HarryGuo.jpg" alt="">
         </div>
         <!-- /.col-lg-8 -->
         <div class="col-lg-8">
