--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
           <h4 id="pub"> Preprints </h4>
        <ul>
           <li><b> [Protein Conformation] Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv</a></li>
-<li><b> [Atomic Claptionrotein Conformation] Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Weiyang Liu, Zhuoxinran Li, Hongyu Guo, Christian Borgs, Jennifer Chayes, Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2409.10584">arXiv</a></li>
+<li><b> [Atomic Collision] Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Weiyang Liu, Zhuoxinran Li, Hongyu Guo, Christian Borgs, Jennifer Chayes, Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2409.10584">arXiv</a></li>
          
                        <li><b> [Text Guided Protein Design] A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
 Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2302.04611">arXiv</a></li>
