--- a/index.html
+++ b/index.html
@@ -94,12 +94,15 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
       </div>
       <!-- /.row -->
     <div class=" my-4 text-left">
-      <h4>Recent News</h4>
+      <h4>Service and Award</h4>
       <ul>
-        <li style="display:none "> <a href="cv_chaoweixiao_Feb.pdf">package</a> </li>
-        <li style="display:none "> <a href="package_ChaoweiXiao.pdf">package</a> </li>
-             <li> [08/2024] We got .... </li>
-                    <li> [10/2024] I will ... </li>
+  
+             <li> [Recent program committee members: ] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
+                    <li> [Awards: ] Best Paper Award at Canadian AI 2021, 
+Best Paper Award at *SEM2015,  
+Best Paper Award at MLDM2012,  
+Research Breakthrough of the Year at NRC-IIT2011,  
+Distinguished Papers Award at ECML-PKDD2006 </li>
 
       </div>
 
