--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
       <h4>Service and Award</h4>
       <ul>
   
-             <li> [Recent program committee members: ] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
-                    <li> [Awards: ] Best Paper Award at Canadian AI 2021, 
+             <li> [Recent program committee members] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
+                    <li> [Research awards] Best Paper Award at Canadian AI 2021, 
 Best Paper Award at *SEM2015,  
 Best Paper Award at MLDM2012,  
 Research Breakthrough of the Year at NRC-IIT2011,  
