--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
        </ul>
          <h4 id="pub"> Publications (Selected) </h4>
          <!--   <p>(* represents equal contribution) </p>  -->
-           <p><a href="publication.html">[Full List]</a>, <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
+         <!--    <p><a href="publication.html">[Full List]</a>,  -->
+             <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
       <!-- <h5> 2023</h5> -->
          <ul>
 
