--- a/index.html
+++ b/index.html
@@ -139,97 +139,97 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
  <li>
     <b>[Molecular Geometry Pretraining with SE(3)-Invariant Denoising Distance Matching].</b>
     <p class='content'>Liu, S., Guo, H., & Tang, J.</p>
-    <a href="#">ICLR</a>
+    <a href="https://openreview.net/pdf?id=CjTHVo1dvR">ICLR 2023</a>
 </li>
 
 <li>
     <b>[Over-Training with Mixup May Hurt Generalization].</b>
     <p class='content'>Liu, Z., Wang, Z., Guo, H., & Mao, Y.</p>
-    <a href="#">ICLR</a>
+    <a href="https://openreview.net/pdf?id=JmkjrlVE-DG">ICLR 2023</a>
 </li>
 
 <li>
     <b>[f-MICL: Understanding and Generalizing InfoNCE-based Contrastive Learning].</b>
     <p class='content'>Lu, Y., Zhang, G., Sun, S., Guo, H., & Yu, Y.</p>
-    <a href="#">TMLR</a>
+    <a href="https://openreview.net/pdf?id=ZD03VUZmRx">TMLR 2023</a>
 </li>
 
 <li>
     <b>[Information Bottleneck and Aggregated Learning].</b>
     <p class='content'>Soflaei, M., Zhang, R., Guo, H., Al-Bashabsheh, A., & Mao, Y.</p>
-    <a href="#">TPAMI</a>
+    <a href="https://ieeexplore.ieee.org/abstract/document/10249215">TPAMI 2023</a>
 </li>
 
 <li>
     <b>[ifMixup: Intrusion-Free Graph Mixup].</b>
     <p class='content'>Guo, H., & Mao, Y.</p>
-    <a href="#">AAAI</a>
+    <a href="https://arxiv.org/pdf/2110.09344.pdf">AAAI 2023</a>
 </li>
 
 <li>
     <b>[T-Cell Receptor Optimization with Reinforcement Learning and Mutation Policies for Precision Immunotherapy].</b>
     <p class='content'>Chen, Z., Min, R., Guo, H., Cheng, C., Clancy, T., & Ning, X.</p>
-    <a href="#">RECOMB</a>
+    <a href="https://arxiv.org/pdf/2303.02162.pdf">RECOMB 2023</a>
 </li>
 
 <li>
     <b>[Binding Peptide Generation for MHC Class I Proteins with Deep Reinforcement Learning].</b>
     <p class='content'>Chen, Z., Zhang, B., Guo, H., Emani, P., Clancy, T., Jiang, C., Gerstein, M., Ning, X., Cheng, C., & Min, M.</p>
-    <a href="#">Bioinformatics</a>
+    <a href="https://pubmed.ncbi.nlm.nih.gov/36692135/">Bioinformatics 2023</a>
 </li>
 
 <li>
     <b>[Pre-training Molecular Graph Representation with 3D Geometry].</b>
     <p class='content'>Liu, S., Wang, H., Liu, W., Lasenby, J., Guo, H., & Tang, J.</p>
-    <a href="#">ICLR</a>
+    <a href="https://arxiv.org/pdf/2110.07728.pdf">ICLR 2022</a>
 </li>
 
 <li>
     <b>[Non-Autoregressive Electron Redistribution Modeling for Reaction Prediction].</b>
     <p class='content'>Bi, H., Wang, H., Shi, C., Coley, C., Tang, J., & Guo, H.</p>
-    <a href="#">ICML</a>
+    <a href="https://arxiv.org/pdf/2106.07801.pdf">ICML 2022</a>
 </li>
 
 <li>
     <b>[Self-supervised Graph-level Representation Learning with Local and Global Structure].</b>
     <p class='content'>Xu, M., Wang, H., Ni, B., Guo, H., & Tang, J.</p>
-    <a href="#">ICML</a>
+    <a href="https://arxiv.org/pdf/2106.04113.pdf">ICML 2022</a>
 </li>
 
 <li>
     <b>[Symmetric Wasserstein Autoencoders].</b>
     <p class='content'>Sun, S., & Guo, H.</p>
-    <a href="#">UAI</a>
+    <a href="https://arxiv.org/pdf/2106.13024.pdf">UAI 2021</a>
 </li>
 
 <li>
     <b>[Class-wise Calibration: A Case Study on COVID-19 Hate Speech].</b>
     <p class='content'>Obadinma, S. G. H. Z. X.</p>
-    <a href="#">CAI</a>
+    <a href="https://www.caiac.ca/en/conferences/canadianai-2021/home">CAI 2021</a>
 </li>
 
 <li>
     <b>[Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions].</b>
     <p class='content'>Guo, H.</p>
-    <a href="#">ECML-PKDD</a>
+    <a href="https://arxiv.org/pdf/2106.13913.pdf">ECML-PKDD 2020</a>
 </li>
 
 <li>
     <b>[Nonlinear Mixup: Out-Of-Manifold Data Augmentation for Text Classification].</b>
     <p class='content'>Guo, H.</p>
-    <a href="#">AAAI</a>
+    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/5822">AAAI 2020</a>
 </li>
 
 <li>
     <b>[Aggregated Learning: A Vector-Quantization Approach to Learning Neural Network Classifiers].</b>
     <p class='content'>Soflaei, M., Guo, H., Al-Bashabsheh, A., Mao, Y., & Zhang, R.</p>
-    <a href="#">AAAI</a>
+    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/6038">AAAI 2020</a>
 </li>
 
 <li>
     <b>[A Graph to Graphs Framework for Retrosynthesis Prediction].</b>
     <p class='content'>Shi, C., Xu, M., Guo, H., Zhang, M., & Tang, J.</p>
-    <a href="#">ICML</a>
+    <a href="http://proceedings.mlr.press/v119/shi20d.html">ICML 2020</a>
 </li>
 
 <li>
@@ -313,7 +313,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Long Short-Term Memory Over Recursive Structures].</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
-    <a href="#">ICML</a>
+    <a href="https://doi.org/10.18653/v1/n16-1106">ICML 2015</a>
 </li>
 
 <li>
@@ -325,13 +325,13 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Generating Text with Deep Reinforcement Learning].</b>
     <p class='content'>Guo, H.</p>
-    <a href="#">Deep Reinforcement Learning Workshop @NeurIPS</a>
+    <a href="http://rll.berkeley.edu/deeprlworkshop/">Deep Reinforcement Learning Workshop @NeurIPS</a>
 </li>
 
 <li>
     <b>[Accelerated Continuous Conditional Random Fields For Load Forecasting].</b>
     <p class='content'>Guo, H.</p>
-    <a href="#">TKDE</a>
+    <a href="http://dx.doi.org/10.1109/TKDE.2015.2399311">TKDE</a>
 </li>
 
 <li>
@@ -349,7 +349,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Multirelational classification: a multiple view approach].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
-    <a href="#">KAIS</a>
+    <a href="http://dx.doi.org/10.1007/s10115-008-0127-5">KAIS</a>
 </li>
 
 <li>
@@ -367,7 +367,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Learning from imbalanced data sets with boosting and data generation: the DataBoost-IM approach].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
-    <a href="#">KDD Explorations</a>
+    <a href="http://dx.doi.org/10.1145/1007730.1007736">KDD Explorations</a>
 </li>           
            
 </ul>
