--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 </li>
 
 <li>
-    <b>[ifMixup: Intrusion-Free Graph Mixup].</b>
+    <b>[Interpolating Graph Pair to Regularize Graph Classification].</b>
     <p class='content'>Guo, H., & Mao, Y.</p>
     <a href="https://arxiv.org/pdf/2110.09344.pdf">AAAI 2023</a>
 </li>
@@ -187,13 +187,13 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Non-Autoregressive Electron Redistribution Modeling for Reaction Prediction].</b>
     <p class='content'>Bi, H., Wang, H., Shi, C., Coley, C., Tang, J., & Guo, H.</p>
-    <a href="https://arxiv.org/pdf/2106.07801.pdf">ICML 2022</a>
+    <a href="https://arxiv.org/pdf/2106.07801.pdf">ICML 2021</a>
 </li>
 
 <li>
     <b>[Self-supervised Graph-level Representation Learning with Local and Global Structure].</b>
     <p class='content'>Xu, M., Wang, H., Ni, B., Guo, H., & Tang, J.</p>
-    <a href="https://arxiv.org/pdf/2106.04113.pdf">ICML 2022</a>
+    <a href="https://arxiv.org/pdf/2106.04113.pdf">ICML 2021</a>
 </li>
 
 <li>
@@ -211,7 +211,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions].</b>
     <p class='content'>Guo, H.</p>
-    <a href="https://arxiv.org/pdf/2106.13913.pdf">ECML-PKDD 2020</a>
+    <a href="https://arxiv.org/pdf/2106.13913.pdf">ECML-PKDD 2021</a>
 </li>
 
 <li>
@@ -235,79 +235,79 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[Dynamic Graph Convolutional Networks for Entity Linking].</b>
     <p class='content'>Wu, J., Zhang, R., Mao, Y., Guo, H., Soflaei, M., & Huai, J.</p>
-    <a href="https://doi.org/10.1145/3366423.3380192">WWW</a>
+    <a href="https://doi.org/10.1145/3366423.3380192">WWW 2020</a>
 </li>
 
 <li>
     <b>[MixUp as Locally Linear Out-of-Manifold Regularization].</b>
     <p class='content'>Guo, H., Mao, Y., & Zhang, R.</p>
-    <a href="https://doi.org/10.1609/aaai.v33i01.33013714">AAAI</a>
+    <a href="https://doi.org/10.1609/aaai.v33i01.33013714">AAAI 2019</a>
 </li>
 
 <li>
     <b>[Uncover the Ground-Truth Relations in Distant Supervision: A Neural Expectation-Maximization Framework].</b>
     <p class='content'>Chen, J., Zhang, R., Mao, Y., Guo, H., & Xu, J.</p>
-    <a href="https://doi.org/10.18653/v1/D19-1031">EMNLP</a>
+    <a href="https://doi.org/10.18653/v1/D19-1031">EMNLP 2019</a>
 </li>
 
 <li>
     <b>[Learning K-way D-dimensional Discrete Embedding for Hierarchical Data Visualization and Retrieval].</b>
     <p class='content'>Liang, X., Min, M., Guo, H., & Wang, G.</p>
-    <a href="https://doi.org/10.24963/ijcai.2019/411">IJCAI</a>
+    <a href="https://doi.org/10.24963/ijcai.2019/411">IJCAI 2019</a>
 </li>
 
 <li>
     <b>[Modeling Noisy Hierarchical Types in Fine-Grained Entity Typing: A Content-Based Weighting Approach].</b>
     <p class='content'>Wu, J., Zhang, R., Mao, Y., Guo, H., & Huai, J.</p>
-    <a href="https://doi.org/10.24963/ijcai.2019/731">IJCAI</a>
+    <a href="https://doi.org/10.24963/ijcai.2019/731">IJCAI 2019</a>
 </li>
 
 <li>
     <b>[A Neural Bag-of-Words Modelling Framework for Link Prediction in Knowledge Bases with Sparse Connectivity].</b>
     <p class='content'>Kong, F., Zhang, R., Guo, H., Mensah, S., Hu, Z., & Mao, Y.</p>
-    <a href="https://doi.org/10.1145/3308558.3313550">WWW</a>
+    <a href="https://doi.org/10.1145/3308558.3313550">WWW 2019</a>
 </li>
 
 <li>
     <b>[Syntax Encoding with Application in Authorship Attribution].</b>
     <p class='content'>Zhang, R., Hu, Z., Guo, H., & Mao, Y.</p>
-    <a href="https://doi.org/10.18653/v1/d18-1294">EMNLP</a>
+    <a href="https://doi.org/10.18653/v1/d18-1294">EMNLP 2018</a>
 </li>          
 
 <li>
     <b>[Parametric t-Distributed Stochastic Exemplar-Centered Embedding].</b>
     <p class='content'>Min, M., Guo, H., & Shen, D.</p>
-    <a href="https://doi.org/10.1007/978-3-030-10925-7_29">ECML PKDD</a>
+    <a href="https://doi.org/10.1007/978-3-030-10925-7_29">ECML PKDD 2018</a>
 </li>
 
 <li>
     <b>[A Deep Network with Visual Text Composition Behavior].</b>
     <p class='content'>Guo, H.</p>
-    <a href="https://doi.org/10.18653/v1/P17-2059">ACL</a>
+    <a href="https://doi.org/10.18653/v1/P17-2059">ACL 2017</a>
 </li>
 
 <li>
     <b>[Exemplar-centered Supervised Shallow Parametric Data Embedding].</b>
     <p class='content'>Min, M., Guo, H., & Song, D.</p>
-    <a href="https://doi.org/10.24963/ijcai.2017/345">IJCAI</a>
+    <a href="https://doi.org/10.24963/ijcai.2017/345">IJCAI 2017</a>
 </li>
 
 <li>
     <b>[Accelerated Continuous Conditional Random Fields for load forecasting].</b>
     <p class='content'>Guo, H.</p>
-    <a href="https://doi.org/10.1109/ICDE.2016.7498390">ICDE</a>
+    <a href="https://doi.org/10.1109/ICDE.2016.7498390">ICDE 2016</a>
 </li>
 
 <li>
     <b>[DAG-Structured Long Short-Term Memory for Semantic Compositionality].</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
-    <a href="https://doi.org/10.18653/v1/n16-1106">NAACL</a>
+    <a href="https://doi.org/10.18653/v1/n16-1106">NAACL 2016</a>
 </li>
 
 <li>
     <b>[Representation Based Translation Evaluation Metrics].</b>
     <p class='content'>Chen, B., & Guo, H.</p>
-    <a href="https://doi.org/10.3115/v1/p15-2025">ACL</a>
+    <a href="https://doi.org/10.3115/v1/p15-2025">ACL 2015</a>
 </li>
 
 <li>
@@ -319,55 +319,55 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li>
     <b>[The Unreasonable Effectiveness of Word Representations for Twitter Named Entity Recognition].</b>
     <p class='content'>Cherry, C., & Guo, H.</p>
-    <a href="https://doi.org/10.3115/v1/n15-1075">NAACL</a>
+    <a href="https://doi.org/10.3115/v1/n15-1075">NAACL 2015</a>
 </li>
 
 <li>
     <b>[Generating Text with Deep Reinforcement Learning].</b>
     <p class='content'>Guo, H.</p>
-    <a href="http://rll.berkeley.edu/deeprlworkshop/">Deep Reinforcement Learning Workshop @NeurIPS</a>
+    <a href="http://rll.berkeley.edu/deeprlworkshop/">Deep Reinforcement Learning Workshop @NeurIPS 2015</a>
 </li>
 
 <li>
     <b>[Accelerated Continuous Conditional Random Fields For Load Forecasting].</b>
     <p class='content'>Guo, H.</p>
-    <a href="http://dx.doi.org/10.1109/TKDE.2015.2399311">TKDE</a>
+    <a href="http://dx.doi.org/10.1109/TKDE.2015.2399311">TKDE 2015</a>
 </li>
 
 <li>
     <b>[An Empirical Study on the Effect of Negation Words on Sentiment].</b>
     <p class='content'>Zhu, X., Guo, H., Mohammad, S., & Kiritchenko, S.</p>
-    <a href="https://doi.org/10.3115/v1/p14-1029">ACL</a>
+    <a href="https://doi.org/10.3115/v1/p14-1029">ACL 2014</a>
 </li>
 
 <li>
     <b>[Modeling Short-Term Energy Load with Continuous Conditional Random Fields].</b>
     <p class='content'>Guo, H.</p>
-    <a href="https://doi.org/10.1007/978-3-642-40988-2_28">ECML PKDD</a>
+    <a href="https://doi.org/10.1007/978-3-642-40988-2_28">ECML PKDD 2013</a>
 </li>
 
 <li>
     <b>[Multirelational classification: a multiple view approach].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
-    <a href="http://dx.doi.org/10.1007/s10115-008-0127-5">KAIS</a>
+    <a href="http://dx.doi.org/10.1007/s10115-008-0127-5">KAIS 2008</a>
 </li>
 
 <li>
     <b>[Mining relational data through correlation-based multiple view validation].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
-    <a href="https://doi.org/10.1145/1150402.1150469">KDD</a>
+    <a href="https://doi.org/10.1145/1150402.1150469">KDD 2007</a>
 </li>
 
 <li>
     <b>[Measuring to Fit: Virtual Tailoring Through Cluster Analysis and Classification].</b>
     <p class='content'>Viktor, H., Paquet, E., & Guo, H.</p>
-    <a href="https://doi.org/10.1007/11871637_38">ECML PKDD</a>
+    <a href="https://doi.org/10.1007/11871637_38">ECML PKDD 2007</a>
 </li>
 
 <li>
     <b>[Learning from imbalanced data sets with boosting and data generation: the DataBoost-IM approach].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
-    <a href="http://dx.doi.org/10.1145/1007730.1007736">KDD Explorations</a>
+    <a href="http://dx.doi.org/10.1145/1007730.1007736">KDD Explorations 2004</a>
 </li>           
            
 </ul>
