--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
       <!-- <h5> 2023</h5> -->
          <ul>
 
-                <li><b>[LLM for Drug Editting] Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
+                <li style="margin-bottom: 20px;"><b>[LLM for Drug Editting] Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
 </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">ICLR 2024</a> </li>
-         <li><b>[Geometric Molecule Pretraining] Symmetry-Informed Geometric Representation for Molecules, Proteins, and Crystalline Materials.  </b> <p class='content'>  Liu, S., Du, W., Li, Y., Li, Z., Zheng, Z., Duan, C., Ma, Z., Yaghi, O., Anandkumar, A., Borgs, C., Chayes, J., Guo, H., & Tang, J.</p> <a href="https://arxiv.org/pdf/2306.09375.pdf"> NeurIPS 2023</a> </li>     
+         <li style="margin-bottom: 20px;"><b>[Geometric Molecule Pretraining] Symmetry-Informed Geometric Representation for Molecules, Proteins, and Crystalline Materials.  </b> <p class='content'>  Liu, S., Du, W., Li, Y., Li, Z., Zheng, Z., Duan, C., Ma, Z., Yaghi, O., Anandkumar, A., Borgs, C., Chayes, J., Guo, H., & Tang, J.</p> <a href="https://arxiv.org/pdf/2306.09375.pdf"> NeurIPS 2023</a> </li>     
 
-       <li><b> [Protein Editing with Disentangled Embedding] Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering.  </b> <p class='content'>  Li, T., Guo, H., Grazioli, F., Gerstein, M., & Min, M. 
+       <li style="margin-bottom: 20px;"><b> [Protein Editing with Disentangled Embedding] Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering.  </b> <p class='content'>  Li, T., Guo, H., Grazioli, F., Gerstein, M., & Min, M. 
 </p> <a href="https://arxiv.org/pdf/2210.08171.pdf"> NeurIPS 2023</a> </li>     
-       <li><b> [Molecule Multi-modal Pretraining] A Group Symmetric Stochastic Differential Equation Model for Molecule Multi-modal Pretraining.  </b> <p class='content'>  Liu, S., Du, W., Ma, Z., Guo, H., & Tang J. 
+       <li style="margin-bottom: 20px;"><b> [Molecule Multi-modal Pretraining] A Group Symmetric Stochastic Differential Equation Model for Molecule Multi-modal Pretraining.  </b> <p class='content'>  Liu, S., Du, W., Ma, Z., Guo, H., & Tang J. 
 </p> <a href="https://arxiv.org/pdf/2305.18407.pdf"> ICML 2023</a> </li>    
 
 
- <li>
+ <li style="margin-bottom: 20px;">
     <b>[Molecular Geometry Pretraining with SE(3)-Invariant Denoising Distance Matching].</b>
     <p class='content'>Liu, S., Guo, H., & Tang, J.</p>
     <a href="https://openreview.net/pdf?id=CjTHVo1dvR">ICLR 2023</a>
