--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@ Distinguished Papers Award at ECML-PKDD2006 </li>
 <!-- <div class="card-body"> -->
           <h4 id="pub"> Preprints </h4>
        <ul>
-          <li><b> [Protein Conformation Generation] Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv</a></li>
-<li><b> [Atomic Collision in Molecule Generation] Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Weiyang Liu, Zhuoxinran Li, Hongyu Guo, Christian Borgs, Jennifer Chayes, Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2409.10584">arXiv</a></li>
-         
-                       <li><b> [Text Guided Protein Design] A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
+<li style="margin-bottom: 20px;"><b> [Protein Conformation Generation] Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv</a></li>
+<li style="margin-bottom: 20px;"><b> [Atomic Collision in Molecule Generation] Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Weiyang Liu, Zhuoxinran Li, Hongyu Guo, Christian Borgs, Jennifer Chayes, Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2409.10584">arXiv</a></li>   
+<li style="margin-bottom: 20px;"><b> [Text Guided Protein Design] A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
 Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2302.04611">arXiv</a></li>
-                        <li><b> [Modeling Protein-Ligand Dynamics] A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Shengchao Liu, Weitao Du, Yanjing Li, Zhuoxinran Li, Vignesh Bhethanabotla, Nakul Rampal, Omar Yaghi, Christian Borgs, Anima Anandkumar, Hongyu Guo, Jennifer Chayes. </p><a href="https://arxiv.org/pdf/2401.15122">arXiv</a></li>
+<li style="margin-bottom: 20px;"><b> [Modeling Protein-Ligand Dynamics] A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Shengchao Liu, Weitao Du, Yanjing Li, Zhuoxinran Li, Vignesh Bhethanabotla, Nakul Rampal, Omar Yaghi, Christian Borgs, Anima Anandkumar, Hongyu Guo, Jennifer Chayes. </p><a href="https://arxiv.org/pdf/2401.15122">arXiv</a></li>
 
        </ul>
          <h4 id="pub"> Publications (Selected) </h4>
@@ -142,229 +141,229 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
     <a href="https://openreview.net/pdf?id=CjTHVo1dvR">ICLR 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Over-Training with Mixup May Hurt Generalization].</b>
     <p class='content'>Liu, Z., Wang, Z., Guo, H., & Mao, Y.</p>
     <a href="https://openreview.net/pdf?id=JmkjrlVE-DG">ICLR 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[f-MICL: Understanding and Generalizing InfoNCE-based Contrastive Learning].</b>
     <p class='content'>Lu, Y., Zhang, G., Sun, S., Guo, H., & Yu, Y.</p>
     <a href="https://openreview.net/pdf?id=ZD03VUZmRx">TMLR 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Information Bottleneck and Aggregated Learning].</b>
     <p class='content'>Soflaei, M., Zhang, R., Guo, H., Al-Bashabsheh, A., & Mao, Y.</p>
     <a href="https://ieeexplore.ieee.org/abstract/document/10249215">TPAMI 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Interpolating Graph Pair to Regularize Graph Classification].</b>
     <p class='content'>Guo, H., & Mao, Y.</p>
     <a href="https://arxiv.org/pdf/2110.09344.pdf">AAAI 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[T-Cell Receptor Optimization with Reinforcement Learning and Mutation Policies for Precision Immunotherapy].</b>
     <p class='content'>Chen, Z., Min, R., Guo, H., Cheng, C., Clancy, T., & Ning, X.</p>
     <a href="https://arxiv.org/pdf/2303.02162.pdf">RECOMB 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Binding Peptide Generation for MHC Class I Proteins with Deep Reinforcement Learning].</b>
     <p class='content'>Chen, Z., Zhang, B., Guo, H., Emani, P., Clancy, T., Jiang, C., Gerstein, M., Ning, X., Cheng, C., & Min, M.</p>
     <a href="https://pubmed.ncbi.nlm.nih.gov/36692135/">Bioinformatics 2023</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Pre-training Molecular Graph Representation with 3D Geometry].</b>
     <p class='content'>Liu, S., Wang, H., Liu, W., Lasenby, J., Guo, H., & Tang, J.</p>
     <a href="https://arxiv.org/pdf/2110.07728.pdf">ICLR 2022</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Non-Autoregressive Electron Redistribution Modeling for Reaction Prediction].</b>
     <p class='content'>Bi, H., Wang, H., Shi, C., Coley, C., Tang, J., & Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.07801.pdf">ICML 2021</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Self-supervised Graph-level Representation Learning with Local and Global Structure].</b>
     <p class='content'>Xu, M., Wang, H., Ni, B., Guo, H., & Tang, J.</p>
     <a href="https://arxiv.org/pdf/2106.04113.pdf">ICML 2021</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Symmetric Wasserstein Autoencoders].</b>
     <p class='content'>Sun, S., & Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.13024.pdf">UAI 2021</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Class-wise Calibration: A Case Study on COVID-19 Hate Speech].</b>
     <p class='content'>Obadinma, S. G. H. Z. X.</p>
     <a href="https://www.caiac.ca/en/conferences/canadianai-2021/home">CAI 2021</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Midpoint Regularization: from High Uncertainty Training Labels to Conservative Classification Decisions].</b>
     <p class='content'>Guo, H.</p>
     <a href="https://arxiv.org/pdf/2106.13913.pdf">ECML-PKDD 2021</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Nonlinear Mixup: Out-Of-Manifold Data Augmentation for Text Classification].</b>
     <p class='content'>Guo, H.</p>
     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/5822">AAAI 2020</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Aggregated Learning: A Vector-Quantization Approach to Learning Neural Network Classifiers].</b>
     <p class='content'>Soflaei, M., Guo, H., Al-Bashabsheh, A., Mao, Y., & Zhang, R.</p>
     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/6038">AAAI 2020</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[A Graph to Graphs Framework for Retrosynthesis Prediction].</b>
     <p class='content'>Shi, C., Xu, M., Guo, H., Zhang, M., & Tang, J.</p>
     <a href="http://proceedings.mlr.press/v119/shi20d.html">ICML 2020</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Dynamic Graph Convolutional Networks for Entity Linking].</b>
     <p class='content'>Wu, J., Zhang, R., Mao, Y., Guo, H., Soflaei, M., & Huai, J.</p>
     <a href="https://doi.org/10.1145/3366423.3380192">WWW 2020</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[MixUp as Locally Linear Out-of-Manifold Regularization].</b>
     <p class='content'>Guo, H., Mao, Y., & Zhang, R.</p>
     <a href="https://doi.org/10.1609/aaai.v33i01.33013714">AAAI 2019</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Uncover the Ground-Truth Relations in Distant Supervision: A Neural Expectation-Maximization Framework].</b>
     <p class='content'>Chen, J., Zhang, R., Mao, Y., Guo, H., & Xu, J.</p>
     <a href="https://doi.org/10.18653/v1/D19-1031">EMNLP 2019</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Learning K-way D-dimensional Discrete Embedding for Hierarchical Data Visualization and Retrieval].</b>
     <p class='content'>Liang, X., Min, M., Guo, H., & Wang, G.</p>
     <a href="https://doi.org/10.24963/ijcai.2019/411">IJCAI 2019</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Modeling Noisy Hierarchical Types in Fine-Grained Entity Typing: A Content-Based Weighting Approach].</b>
     <p class='content'>Wu, J., Zhang, R., Mao, Y., Guo, H., & Huai, J.</p>
     <a href="https://doi.org/10.24963/ijcai.2019/731">IJCAI 2019</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[A Neural Bag-of-Words Modelling Framework for Link Prediction in Knowledge Bases with Sparse Connectivity].</b>
     <p class='content'>Kong, F., Zhang, R., Guo, H., Mensah, S., Hu, Z., & Mao, Y.</p>
     <a href="https://doi.org/10.1145/3308558.3313550">WWW 2019</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Syntax Encoding with Application in Authorship Attribution].</b>
     <p class='content'>Zhang, R., Hu, Z., Guo, H., & Mao, Y.</p>
     <a href="https://doi.org/10.18653/v1/d18-1294">EMNLP 2018</a>
 </li>          
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Parametric t-Distributed Stochastic Exemplar-Centered Embedding].</b>
     <p class='content'>Min, M., Guo, H., & Shen, D.</p>
     <a href="https://doi.org/10.1007/978-3-030-10925-7_29">ECML PKDD 2018</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[A Deep Network with Visual Text Composition Behavior].</b>
     <p class='content'>Guo, H.</p>
     <a href="https://doi.org/10.18653/v1/P17-2059">ACL 2017</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Exemplar-centered Supervised Shallow Parametric Data Embedding].</b>
     <p class='content'>Min, M., Guo, H., & Song, D.</p>
     <a href="https://doi.org/10.24963/ijcai.2017/345">IJCAI 2017</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Accelerated Continuous Conditional Random Fields for load forecasting].</b>
     <p class='content'>Guo, H.</p>
     <a href="https://doi.org/10.1109/ICDE.2016.7498390">ICDE 2016</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[DAG-Structured Long Short-Term Memory for Semantic Compositionality].</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
     <a href="https://doi.org/10.18653/v1/n16-1106">NAACL 2016</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Representation Based Translation Evaluation Metrics].</b>
     <p class='content'>Chen, B., & Guo, H.</p>
     <a href="https://doi.org/10.3115/v1/p15-2025">ACL 2015</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Long Short-Term Memory Over Recursive Structures].</b>
     <p class='content'>Zhu, X., Sobhani, P., & Guo, H.</p>
     <a href="https://doi.org/10.18653/v1/n16-1106">ICML 2015</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[The Unreasonable Effectiveness of Word Representations for Twitter Named Entity Recognition].</b>
     <p class='content'>Cherry, C., & Guo, H.</p>
     <a href="https://doi.org/10.3115/v1/n15-1075">NAACL 2015</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Generating Text with Deep Reinforcement Learning].</b>
     <p class='content'>Guo, H.</p>
     <a href="http://rll.berkeley.edu/deeprlworkshop/">Deep Reinforcement Learning Workshop @NeurIPS 2015</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Accelerated Continuous Conditional Random Fields For Load Forecasting].</b>
     <p class='content'>Guo, H.</p>
     <a href="http://dx.doi.org/10.1109/TKDE.2015.2399311">TKDE 2015</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[An Empirical Study on the Effect of Negation Words on Sentiment].</b>
     <p class='content'>Zhu, X., Guo, H., Mohammad, S., & Kiritchenko, S.</p>
     <a href="https://doi.org/10.3115/v1/p14-1029">ACL 2014</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Modeling Short-Term Energy Load with Continuous Conditional Random Fields].</b>
     <p class='content'>Guo, H.</p>
     <a href="https://doi.org/10.1007/978-3-642-40988-2_28">ECML PKDD 2013</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Multirelational classification: a multiple view approach].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
     <a href="http://dx.doi.org/10.1007/s10115-008-0127-5">KAIS 2008</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Mining relational data through correlation-based multiple view validation].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
     <a href="https://doi.org/10.1145/1150402.1150469">KDD 2007</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Measuring to Fit: Virtual Tailoring Through Cluster Analysis and Classification].</b>
     <p class='content'>Viktor, H., Paquet, E., & Guo, H.</p>
     <a href="https://doi.org/10.1007/11871637_38">ECML PKDD 2007</a>
 </li>
 
-<li>
+<li style="margin-bottom: 20px;">
     <b>[Learning from imbalanced data sets with boosting and data generation: the DataBoost-IM approach].</b>
     <p class='content'>Guo, H., & Viktor, H.</p>
     <a href="http://dx.doi.org/10.1145/1007730.1007736">KDD Explorations 2004</a>
