--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
          <ul>
 
                 <li style="margin-bottom: 20px;"><b>[LLM for Drug Editting] Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
-</p> <a href="https://arxiv.org/pdf/2305.18090.pdf">ICLR 2024</a> </li>
+</p> <a href="https://arxiv.org/pdf/2305.18090.pdf">
+  <span style="background-color: yellow;">ICLR 2024 </span> </a> </li>
          <li style="margin-bottom: 20px;"><b>[Geometric Molecule Pretraining] Symmetry-Informed Geometric Representation for Molecules, Proteins, and Crystalline Materials.  </b> <p class='content'>  Liu, S., Du, W., Li, Y., Li, Z., Zheng, Z., Duan, C., Ma, Z., Yaghi, O., Anandkumar, A., Borgs, C., Chayes, J., Guo, H., & Tang, J.</p> <a href="https://arxiv.org/pdf/2306.09375.pdf"> NeurIPS 2023</a> </li>     
 
        <li style="margin-bottom: 20px;"><b> [Protein Editing with Disentangled Embedding] Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering.  </b> <p class='content'>  Li, T., Guo, H., Grazioli, F., Gerstein, M., & Min, M. 
