--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Distinguished Papers Award at ECML-PKDD2006 </li>
 <!-- <div class="card-body"> -->
           <h4 id="pub"> Preprints </h4>
        <ul>
+<li style="margin-bottom: 20px;"><b> [Protein Conformation Generation] A Geometric Foundation Model for Crystalline Material Discovery. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Zhuoxinran Li, Zhiling Zheng, Omar Yaghi, Christian Borgs, Hongyu Guo, Anima Anandkumar, Jennifer Chayes. </p><a href="#">arXiv</a></li>
 <li style="margin-bottom: 20px;"><b> [Protein Conformation Generation] Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv</a></li>
 <li style="margin-bottom: 20px;"><b> [Atomic Collision in Molecule Generation] Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Weiyang Liu, Zhuoxinran Li, Hongyu Guo, Christian Borgs, Jennifer Chayes, Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2409.10584">arXiv</a></li>   
 <li style="margin-bottom: 20px;"><b> [Text Guided Protein Design] A Text-guided Protein Design Framework. </b><p class='content'> Shengchao Liu, Yanjing Li, Zhuoxinran Li, Anthony Gitter, Yutao Zhu, Jiarui Lu,
