--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
         <!-- /.col-md-4 -->
       </div>
       <!-- /.row -->
+
+    <div class=" my-4 text-left">
+      <h4>Recent News</h4>
+      <ul>
+             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">A molecule search project with Yoshua Bengio</a>   </li>
+      </div>
+
+      
     <div class=" my-4 text-left">
       <h4>Service and Award</h4>
       <ul>
