--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
     <div class=" my-4 text-left">
       <h4>Recent News</h4>
       <ul>
-             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> <b> <span style="color: green;">[A molecule search project with Yoshua Bengio]</span> </b></a>   </li>
+             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> <b> <span style="color: green;">[A molecule search project with Yoshua Bengio at Mila]</span> </b></a>   </li>
       </div>
 
       
