--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
     <div class=" my-4 text-left">
       <h4>Recent News</h4>
       <ul>
-             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> <b> <span style="color: green;">A molecule search project with Yoshua Bengio at Mila</span> </b></a>   </li>
-         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project"> <b> <span style="color: green;">A molecule graph generation project with Jian Tang at Mila</span> </b></a>   </li>
+             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> <b> <span style="color: green;">A molecule search project with Prof. Yoshua Bengio at Mila</span> </b></a>   </li>
+         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project"> <b> <span style="color: green;">A molecule graph generation project with Prof. Jian Tang at Mila</span> </b></a>   </li>
       </div>
 
       
