--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <!-- Heading Row -->
       <div class="row my-4">
         <div class="col-lg-4">
-        -->  <img class="img-fluid rounded img-responsive" style="width:15%" src="HarryGuo.jpg" alt=""> -->
+        <!--   <img class="img-fluid rounded img-responsive" style="width:15%" src="HarryGuo.jpg" alt=""> -->
 <img class="img-fluid rounded img-responsive" 
-     style="width:150px; height:150px; object-fit: cover;" 
+     style="width:200px; height:200px; object-fit: cover;" 
      src="HarryGuo.jpg" alt="">
           
         </div>
