--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
 <img class="img-fluid rounded img-responsive" 
      style="width:200px; height:250px; object-fit: cover;" 
      src="HarryGuo.jpg" alt="">
+
+<div style="display: flex; align-items: center;">
+  <img src="HarryGuo.jpg" alt="Harry Guo" style="width:200px; height:250px; object-fit: cover; margin-right: 20px;">
+  <div>
+    <h3>Hongyu (Harry) Guo</h3>
+    <p>Email: hongyu.guo@uottawa.ca</p>
+    <p>Senior Research Officer at NRC and Adjunct Professor at the University of Ottawa.</p>
+  </div>
+</div>
           
         </div>
         <!-- /.col-lg-8 -->
