--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <div class="row my-4">
         <div class="col-lg-4">
         <!--   <img class="img-fluid rounded img-responsive" style="width:15%" src="HarryGuo.jpg" alt=""> -->
-<img class="img-fluid rounded img-responsive" 
+<!--  <img class="img-fluid rounded img-responsive" 
      style="width:200px; height:250px; object-fit: cover;" 
-     src="HarryGuo.jpg" alt="">
+     src="HarryGuo.jpg" alt=""> -->
 
 <div style="display: flex; align-items: center;">
   <img src="HarryGuo.jpg" alt="Harry Guo" style="width:200px; height:250px; object-fit: cover; margin-right: 20px;">
@@ -75,10 +75,12 @@
         </div>
         <!-- /.col-lg-8 -->
         <div class="col-lg-8">
-          <h3>Hongyu (Harry) Guo </h3>
+ <!--          <h3>Hongyu (Harry) Guo </h3>
           <p>Email: hongyu.guo@uottawa.ca</p>
+          -->
           <p class=" m-0"> I am a Senior Researcher Officer at the <a href="https://nrc.canada.ca/en"> Digital Technologies Research Center of the National Research Council Canada (NRC) </a>. I am also an Adjunct Professor in the <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science"> School of Electrical Engineering and Computer Science </a> at the <a href="https://www.uottawa.ca/en"> University of Ottawa </a>. 
           <p></p>
+          
           <p class=" m-0">   I received the BEng and PhD degrees from the Shanghai Jiao Tong University and University of Ottawa, respectively, both in computer science. 
 Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
           
