--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h3>Hongyu (Harry) Guo</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p>Senior Research Officer at NRC and Adjunct Professor at the University of Ottawa.</p>
-     <p class="m-0">I am very interested in deep learning and its applications in NLP, vision, graphs, and drug/material discovery. </p>
+     <p class="m-0"> Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery. </p>
               </p>
           <p class="m-0"> <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
           </font></p> 
