--- a/index.html
+++ b/index.html
@@ -77,15 +77,21 @@
 </div>
           
         </div>
-        <!-- /.col-lg-8 -->
-        <div class="col-lg-8">
- <!--          <h3>Hongyu (Harry) Guo </h3>
-          <p>Email: hongyu.guo@uottawa.ca</p>
-          -->
-          <p class=" m-0"> I am a Senior Researcher Officer at the <a href="https://nrc.canada.ca/en"> Digital Technologies Research Center of the National Research Council Canada (NRC) </a>.  </p>
-           <p class=" m-0"> I am also an Adjunct Professor in the <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science"> School of Electrical Engineering and Computer Science </a> at the <a href="https://www.uottawa.ca/en"> University of Ottawa </a>.   </p>
-          <p class=" m-0">   I received the BEng and PhD degrees from the Shanghai Jiao Tong University and University of Ottawa, respectively, both in computer science. 
-Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca </p>
+<div class="col-lg-8">
+  <p class="m-0" style="line-height: 1.2;">
+    I am a Senior Researcher Officer at the 
+    <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a>.
+  </p>
+  <p class="m-0" style="line-height: 1.2;">
+    I am also an Adjunct Professor in the 
+    <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
+    at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.
+  </p>
+  <p class="m-0" style="line-height: 1.2;">
+    I received BEng and PhD degrees from Shanghai Jiao Tong University and the University of Ottawa, respectively, both in computer science.
+    Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
+  </p>
+</div>
         <br>  
     <!--        <br>  -->
 
