--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
   <div>
     <h3>Hongyu (Harry) Guo</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
-    <p>Senior Research Officer at NRC and Adjunct Professor at the University of Ottawa.</p>
+    <p>Senior Researcher Officer at the 
+    <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a> and Adjunct Professor in the 
+    <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
+    at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.</p>
      <p class="m-0"> Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery. </p>
               </p>
           <p class="m-0"> <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
