--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <h3>Hongyu (Harry) Guo</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p>Senior Researcher Officer at the 
-    <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a> and Adjunct Professor in the 
+    <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a>. </p>
+      <p> Adjunct Professor in the 
     <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
     at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.</p>
      <p class="m-0"> Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery. </p>
@@ -81,15 +82,7 @@
           
         </div>
 <div class="col-lg-8">
-  <p class="m-0" style="line-height: 1.2;">
-    I am a Senior Researcher Officer at the 
-    <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a>.
-  </p>
-  <p class="m-0" style="line-height: 1.2;">
-    I am also an Adjunct Professor in the 
-    <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
-    at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.
-  </p>
+
   <p class="m-0" style="line-height: 1.2;">
     I received BEng and PhD degrees from Shanghai Jiao Tong University and the University of Ottawa, respectively, both in computer science.
     Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
