--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <div class=" my-4 text-left">
       <h4>Recent News</h4>
       <ul>
-             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient"> <b> <span style="color: black;">A molecule search project with Prof. Yoshua Bengio at Mila</span> </b></a>   </li>
-         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project"> <b> <span style="color: black;">A molecule graph generation project with Prof. Jian Tang at Mila</span> </b></a>   </li>
+             <li> <a href="https://nrc.canada.ca/en/stories/using-artificial-intelligence-make-molecule-discovery-more-efficient">  <span style="color: black;">A molecule search project with Prof. Yoshua Bengio at Mila</span> </a>   </li>
+         <li> <a href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/intelligent-design-through-graph-generation-deep-generative-models-reinforcement-learning-project">  <span style="color: black;">A molecule graph generation project with Prof. Jian Tang at Mila</span></a>   </li>
       </div>
 
       
