--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="col-lg-8">
 
   <p class="m-0" style="line-height: 1.2;">
-    I received BEng and PhD degrees from Shanghai Jiao Tong University and the University of Ottawa, respectively, both in computer science.
+    I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
     Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
   </p>
 </div>
