--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Distinguished Papers Award at ECML-PKDD2006 </li>
 
    <div class=" my-4 text-left">      
 <!-- <div class="card-body"> -->
-          <h4 id="pub"> Preprints </h4>
+          <h4 id="pub"> Recent Preprints </h4>
        <ul>
 <li style="margin-bottom: 20px;"><b> <span style="color: green;">[Material Foundation Model]</span> A Geometric Foundation Model for Crystalline Material Discovery. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Zhuoxinran Li, Zhiling Zheng, Omar Yaghi, Christian Borgs, Hongyu Guo, Anima Anandkumar, Jennifer Chayes. </p><a href="https://openreview.net/pdf?id=HdPg9WCDKZ">arXiv</a></li>
 <li style="margin-bottom: 20px;"><b> <span style="color: green;">[Protein Conformation]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Jiarui Lu, Xiaoyin Chen, Stephen Zhewen Lu, Chence Shi, Hongyu Guo, Yoshua Bengio, Jian Tang. </p><a href="https://arxiv.org/pdf/2410.18403">arXiv</a></li>         
