--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     <div class="container">
 
       <!-- Heading Row -->
-      <div class="row my-4">
-        <div class="col-lg-4">
+
         <!--   <img class="img-fluid rounded img-responsive" style="width:15%" src="HarryGuo.jpg" alt=""> -->
 <!--  <img class="img-fluid rounded img-responsive" 
      style="width:200px; height:250px; object-fit: cover;" 
@@ -71,23 +70,25 @@
   <img src="HarryGuo.jpg" alt="Harry Guo" 
        style="width: 230px; height: 230px; object-fit: cover; margin-right: 20px; 
               border: 2px solid #000; border-radius: 10px;">
-</div>
-    
+  
+  <div>
     <h3>Hongyu (Harry) Guo</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p>Senior Researcher Officer at the 
-    <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a>. </p>
-      <p> Adjunct Professor in the 
-    <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
-    at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.</p>
-     <p class="m-0"> Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery. </p>
-              </p>
-          <p class="m-0"> <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
-          </font></p> 
+      <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a>.
+    </p>
+    <p>Adjunct Professor in the 
+      <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
+      at the <a href="https://www.uottawa.ca/en">University of Ottawa</a>.
+    </p>
+    <p class="m-0">Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
+    <p class="m-0">
+      <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, 
+      <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a>
+    </p>
   </div>
 </div>
-          
-        </div>
+  
 <div class="col-lg-8">
 
   <p class="m-0" style="line-height: 1.2;">
