--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li style="margin-bottom: 20px;"><b> <span style="color: green;">[Protein-Ligand Dynamics]</span> A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Shengchao Liu, Weitao Du, Yanjing Li, Zhuoxinran Li, Vignesh Bhethanabotla, Nakul Rampal, Omar Yaghi, Christian Borgs, Anima Anandkumar, Hongyu Guo, Jennifer Chayes. </p><a href="https://arxiv.org/pdf/2401.15122">arXiv</a></li>
 
        </ul>
-         <h4 id="pub"> Publications (Selected) </h4>
-         <!--   <p>(* represents equal contribution) </p>  -->
+         <h4 id="pub"> Publications (Selected)  <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a> </h4>
+           <p>(* represents equal contribution) </p> 
          <!--    <p><a href="publication.html">[Full List]</a>,  -->
-             <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a></p>
+             
       <!-- <h5> 2023</h5> -->
          <ul>
 
