--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
     <p class="m-0">Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
     <p class="m-0">
       <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, 
-      <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a>
+      <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a>, 
+      <a href="https://www.linkedin.com/in/harry-h-y-guo-a582087">[LinkedIn]</a>,
+      <a href="https://twitter.com/Harry_HongyuGuo">[Twitter]</a>
+      
     </p>
   </div>
 </div>
@@ -143,7 +146,7 @@ Zhao Xu, Weili Nie, Arvind Ramanathan, Chaowei Xiao, Jian Tang, Hongyu Guo, and 
 <li style="margin-bottom: 20px;"><b> <span style="color: green;">[Protein-Ligand Dynamics]</span> A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Shengchao Liu, Weitao Du, Yanjing Li, Zhuoxinran Li, Vignesh Bhethanabotla, Nakul Rampal, Omar Yaghi, Christian Borgs, Anima Anandkumar, Hongyu Guo, Jennifer Chayes. </p><a href="https://arxiv.org/pdf/2401.15122">arXiv</a></li>
 
        </ul>
-         <h4 id="pub"> Publications (Selected)  <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a> </h4>
+         <h4 id="pub"> Publications (Selected)  <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Full List on Google Scholar]</a> </h4>
            <p>(* represents equal contribution) </p> 
          <!--    <p><a href="publication.html">[Full List]</a>,  -->
              
