--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <p class="m-0">Research interest: deep learning and its applications in natural language processing, computer vision, graph-based models, and drug/material discovery.</p>
     <p class="m-0">
       <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, 
-      <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a>, 
-      <a href="https://www.linkedin.com/in/harry-h-y-guo-a582087">[LinkedIn]</a>,
-      <a href="https://twitter.com/Harry_HongyuGuo">[Twitter]</a>      
+      <a href="https://uniweb.uottawa.ca/embed/profile/members/4499">[uOttawa Webpage]</a> 
+   <!--     <a href="https://www.linkedin.com/in/harry-h-y-guo-a582087">[LinkedIn]</a>, -->
+   <!--     <a href="https://twitter.com/Harry_HongyuGuo">[Twitter]</a>      -->
     </p>
-  <p class="m-0" style="line-height: 1.2;">
-    I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
-    Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
-  </p>
+
   </div>
 </div>
   
 <div class="col-lg-8">
-
+  <p class="m-0" style="line-height: 1.2;">
+    I hold a BEng from Shanghai Jiao Tong University and a PhD from the University of Ottawa, both in computer science.
+    Alternative contact email: hongyu.guo@nrc-cnrc.gc.ca
+  </p>
 
 </div>
         <br>  
